# market

./: .gitignore
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1bc285c79610_model_user_field_password_64_255.py  dc4e561335f5_init.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: auth.py
backend/app/core/: config.py  security.py
backend/app/db/models/: db_helper.py  user.py
backend/app/dependencies/: auth.py
