[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "pydantic-settings>=2.11.0",
    "fastapi>=0.135.2",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "uvicorn>=0.42.0",
    "psycopg2>=2.9.11",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "argon2-cffi>=25.1.0",
]
